--- a/src/components/customers/Customers.css
+++ b/src/components/customers/Customers.css
@@ -1,4 +1,4 @@
-  .employees {
+  .customers {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -6,33 +6,28 @@
     margin: 3rem;
   }
 
-  .employees > * {
+  .customers > * {
     flex-basis: 31%;
     margin: 0.5rem;
   }
 
-  .employee {
+  section.customer {
+  margin: 3rem;
+}
+
+.customer {
   background-color: var(--white);
   border: 1px solid var(--outline);
   border-radius: 0.5rem;
   padding: 1rem;
 }
 
-section.employee {
-  margin: 3rem;
-}
-
-.employee-info {
+.customer-info {
   color: var(--info);
   font-family: "Roboto", sans-serif;
 }
 
-.employee-footer {
-  margin: 1rem 0 0.25rem 0;
-  font-style: oblique;
-}
-
-.employee-header {
+.customer-header {
   font-size: larger;
   font-weight: 700;
   line-height: 3rem;
